.......PS. [ZBX-13788] fixed host availability stuck in unknown state after proxy changes (wiper)
........S. [ZBX-14313] fixed trigger level correlation when multiple tags are set (wiper)
........S. [ZBX-12372] fixed duplication of prefix "/" for second parameter "path" in items "web.page.*" (MVekslers)
...G...... [ZBX-14315] fixed validation of "max_depth" in "vfs.dir.size" for agent (MVekslers)

--------------------------------------------------------------------------------
Changes for 4.0.0alpha6

New features:
..F....... [ZBXNEXT-4415] added new mode "Compact view" to the Problems page with ability to toggle highlighting whole row; added option to toggle timeline (agriscenko, Andzs)
A.F.....S. [ZBXNEXT-2788] added support "NOT" keyword in custom expression fields (Ivo, Sergejs)
..F....... [ZBXNEXT-4516] renamed dashboard widget and screen element "System status" to "Problems by severity" (Sasha)
..F....... [ZBXNEXT-4516] renamed dashboard widget and screen element "Host status" to "Problem hosts" (Sasha)
..F....... [ZBXNEXT-4516] renamed dashboard widget, screen element and report "Status of Zabbix" to "System information" (Sasha)
....IJ.... [ZBX-13376] moved functionality to enable JMX interface in Java gateway to settings.sh and ensured setting TCP timeout (dimir)
A....J.... [ZBXNEXT-4458] improved logging of Java gateway, added username/password validation for JMX items (vjaceslavs)
A.F.I..PS. [ZBXNEXT-4411] added compression of server-proxy data exchange (miks, wiper)
A.F.I..PS. [ZBXNEXT-4488] added ability to push data via trapper to HTTP agent item type (gcalenko, Ivo, vmurzins, wiper)
A.FGI..PS. [ZBXNEXT-4358] added HTTP agent item type for data gathering via HTTP (gcalenko, Ivo, vso)
..F....... [ZBXNEXT-4413] dropped Monitoring->Triggers view (miks, Sasha)
..F....... [ZBXNEXT-4413] added the trigger context menu option to view or edit the trigger description (miks, Sasha)