@@ -26,6 +26,7 @@ require_once dirname(__FILE__).'/testAction.php';
 require_once dirname(__FILE__).'/testApplication.php';
 require_once dirname(__FILE__).'/testConfiguration.php';
 require_once dirname(__FILE__).'/testCorrelation.php';
+require_once dirname(__FILE__).'/testDRule.php';
 require_once dirname(__FILE__).'/testHostGroup.php';
 require_once dirname(__FILE__).'/testIconMap.php';
 require_once dirname(__FILE__).'/testProxy.php';
@@ -49,6 +50,7 @@ class ApiJsonTests {
 		$suite->addTestSuite('testApplication');
 		$suite->addTestSuite('testConfiguration');
 		$suite->addTestSuite('testCorrelation');
+		$suite->addTestSuite('testDRule');
 		$suite->addTestSuite('testHostGroup');
 		$suite->addTestSuite('testIconMap');
 		$suite->addTestSuite('testProxy');
