@@ -1288,56 +1288,45 @@ int	zbx_jsonpath_next(const char *path, const char **pnext, zbx_strloc_t *loc, i
 	if ('[' != *next)
 		return zbx_jsonpath_error(*pnext);
 
-	while (*(++next) == ' ')
-		;
+	SKIP_WHITESPACE_NEXT(next);
 
 	/* process array index component */
 	if (0 != isdigit(*next))
 	{
-		for (pos = 0; 0 != isdigit(next[pos]); pos++)
+		for (pos = 1; 0 != isdigit(next[pos]); pos++)
 			;
-
-		if (0 == pos)
-			return zbx_jsonpath_error(*pnext);
 
 		loc->l = next - path;
 		loc->r = loc->l + pos - 1;
 
 		next += pos;
-
-		while (*next == ' ')
-			next++;
-
-		if (']' != *next++)
-			return zbx_jsonpath_error(*pnext);
-
-		*pnext = next;
 		*type = ZBX_JSONPATH_ARRAY_INDEX;
 
-		return SUCCEED;
+		SKIP_WHITESPACE(next);
 	}
-
-	loc->l = next - path + 1;
-
-	for (quotes = *next++; quotes != *next; next++)
+	else
 	{
-		if ('\0' == *next)
+		loc->l = next - path + 1;
+
+		for (quotes = *next++; quotes != *next; next++)
+		{
+			if ('\0' == *next)
+				return zbx_jsonpath_error(*pnext);
+		}
+
+		if ((pos = next - path) == loc->l)
 			return zbx_jsonpath_error(*pnext);
+
+		loc->r = pos - 1;
+		*type = ZBX_JSONPATH_COMPONENT_BRACKET;
+
+		SKIP_WHITESPACE_NEXT(next);
 	}
-
-	if ((pos = next - path) == loc->l)
-		return zbx_jsonpath_error(*pnext);
-
-	loc->r = pos - 1;
-
-	while (*(++next) == ' ')
-		;
 
 	if (']' != *next++)
 		return zbx_jsonpath_error(*pnext);
 
 	*pnext = next;
-	*type = ZBX_JSONPATH_COMPONENT_BRACKET;
 
 	return SUCCEED;
 }
