@@ -21,7 +21,11 @@
 #define ZABBIX_JSON_PARSER_H
 
 #define SKIP_WHITESPACE(src)	\
-	while ('\0' != *src && NULL != strchr(ZBX_WHITESPACE, *src)) src++
+	while ('\0' != *(src) && NULL != strchr(ZBX_WHITESPACE, *(src))) (src)++
+
+#define SKIP_WHITESPACE_NEXT(src)\
+	(src)++; \
+	SKIP_WHITESPACE(src)
 
 int	zbx_json_validate(const char *start, char **error);
 
